contrast issues

--- a/styles.css
+++ b/styles.css
@@ -59,5 +59,5 @@ h1{
 /*pseudo-classes*/
 a:link {color: #000814;}
 a:visited {color: #d90429;}
-a:hover{color: #03045e;}
+a:hover{color: #000000;}
 a:active {color: #b7094c;}
